# bevy_spine

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: transform.rs
examples/: spine.rs  sprite.rs
src/: entity.rs  lib.rs
src/constraints/: mod.rs
src/spine/: atlas.rs  mod.rs  spine.rs
src/sprite/: entity.rs  mesh_helper.rs  mod.rs  sprite.rs
src/sprite/render/: mod.rs  sprite.frag  sprite.vert
src/transform/: entity.rs  local_to_world_2d5_system.rs  local_to_world_2d_system.rs  local_to_world_children_of_transform_2d_system.rs  local_to_world_system.rs  mod.rs  tagging_system.rs  transform_tagging_system.rs
src/transform/components/: dont_propagate_transform.rs  global_matrix.rs  hierarchy_depth.rs  local_to_world.rs  local_to_world2d.rs  local_to_world_2d.rs  mod.rs  shear.rs  shear_transform.rs  transform2d.rs  transform_propagation_contraint.rs  world_to_local.rs  world_to_local_2d.rs
